// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameService add player returns valid player 1`] = `
Object {
  "deck": Array [],
  "id": Any<String>,
  "isAI": false,
  "isActive": false,
  "isHost": false,
  "nickname": "foo",
  "points": 0,
  "token": Any<String>,
}
`;

exports[`GameService builds pile works 1`] = `
Object {
  "discardedPrompts": Array [],
  "discardedResponses": Array [],
  "prompts": Any<Array>,
  "responses": Any<Array>,
}
`;

exports[`GameService create / join game creates empty game 1`] = `
Object {
  "game": Object {
    "handSize": 10,
    "hasPassword": false,
    "id": Any<String>,
    "packs": Array [],
    "status": "created",
    "timeouts": Object {
      "betweenRounds": 30,
      "judging": 120,
      "playing": 120,
      "revealing": 60,
    },
    "winnerPoints": 20,
  },
  "players": Array [],
  "rounds": Array [],
}
`;

exports[`GameService create / join game creates game with two packs and password 1`] = `
Object {
  "game": Object {
    "handSize": 10,
    "hasPassword": true,
    "id": Any<String>,
    "packs": Array [
      Object {
        "abbr": "BaseUK",
        "description": "The UK edition of the base game",
        "icon": "",
        "name": "Base Set (UK Edition)",
        "official": true,
      },
      Object {
        "abbr": "www",
        "description": "- placeholder -",
        "icon": "globe",
        "name": "World Wide Web Pack",
        "official": true,
      },
    ],
    "password": Any<String>,
    "status": "created",
    "timeouts": Object {
      "betweenRounds": 30,
      "judging": 120,
      "playing": 120,
      "revealing": 60,
    },
    "winnerPoints": 20,
  },
  "players": Array [],
  "rounds": Array [],
}
`;

exports[`GameService create / join game rejects invalid packs 1`] = `[AssertionError: Invalid pack undefined.]`;

exports[`GameService create / join game rejects invalid packs 2`] = `[AssertionError: Invalid pack BaseUKf.]`;

exports[`GameService static information lists available packs 1`] = `
Array [
  Object {
    "abbr": "BaseUK",
    "description": "The UK edition of the base game",
    "icon": "",
    "name": "Base Set (UK Edition)",
    "official": true,
    "promptsCount": 90,
    "responsesCount": 460,
  },
  Object {
    "abbr": "Base",
    "description": "- placeholder -",
    "icon": "",
    "name": "Base Set",
    "official": true,
    "promptsCount": 90,
    "responsesCount": 460,
  },
  Object {
    "abbr": "family",
    "description": "Cards Against Humanity: Family Edition is a new fill-in-the-blank comedy game that’s just like Cards Against Humanity, but it’s written for kids and adults to play together.",
    "icon": "child",
    "name": "Family Edition (BETA)",
    "official": true,
    "promptsCount": 70,
    "responsesCount": 349,
  },
  Object {
    "abbr": "greenbox",
    "description": "- placeholder -",
    "icon": "square",
    "name": "Green Box Expansion",
    "official": true,
    "promptsCount": 55,
    "responsesCount": 245,
  },
  Object {
    "abbr": "CAHe1",
    "description": "- placeholder -",
    "icon": "1",
    "name": "The First Expansion",
    "official": true,
    "promptsCount": 20,
    "responsesCount": 80,
  },
  Object {
    "abbr": "CAHe2",
    "description": "- placeholder -",
    "icon": "2",
    "name": "The Second Expansion",
    "official": true,
    "promptsCount": 25,
    "responsesCount": 75,
  },
  Object {
    "abbr": "CAHe3",
    "description": "- placeholder -",
    "icon": "3",
    "name": "The Third Expansion",
    "official": true,
    "promptsCount": 25,
    "responsesCount": 75,
  },
  Object {
    "abbr": "CAHe6",
    "description": "- placeholder -",
    "icon": "6",
    "name": "The Sixth Expansion",
    "official": true,
    "promptsCount": 25,
    "responsesCount": 75,
  },
  Object {
    "abbr": "CAHe5",
    "description": "- placeholder -",
    "icon": "5",
    "name": "The Fifth Expansion",
    "official": true,
    "promptsCount": 25,
    "responsesCount": 75,
  },
  Object {
    "abbr": "CAHe4",
    "description": "- placeholder -",
    "icon": "4",
    "name": "The Fourth Expansion",
    "official": true,
    "promptsCount": 30,
    "responsesCount": 70,
  },
  Object {
    "abbr": "PAXP2013",
    "description": "- placeholder -",
    "icon": "paypal",
    "name": "PAX Prime 2013",
    "official": true,
    "promptsCount": 7,
    "responsesCount": 37,
  },
  Object {
    "abbr": "fantasy",
    "description": "- placeholder -",
    "icon": "magic",
    "name": "Fantasy Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 26,
  },
  Object {
    "abbr": "PAXE2013",
    "description": "- placeholder -",
    "icon": "arrow-circle-right",
    "name": "PAX East 2013",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 24,
  },
  Object {
    "abbr": "food",
    "description": "- placeholder -",
    "icon": "cutlery",
    "name": "Food Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 24,
  },
  Object {
    "abbr": "PAX2015",
    "description": "- placeholder -",
    "icon": "truck",
    "name": "PAX Prime 2015 Food Packs",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 24,
  },
  Object {
    "abbr": "reject2",
    "description": "- placeholder -",
    "icon": "ban",
    "name": "Reject Pack 2",
    "official": true,
    "promptsCount": 10,
    "responsesCount": 24,
  },
  Object {
    "abbr": "90s",
    "description": "- placeholder -",
    "icon": "birthday-cake",
    "name": "90s Nostalgia Pack",
    "official": true,
    "promptsCount": 7,
    "responsesCount": 23,
  },
  Object {
    "abbr": "science",
    "description": "- placeholder -",
    "icon": "flask",
    "name": "Science Pack",
    "official": true,
    "promptsCount": 7,
    "responsesCount": 23,
  },
  Object {
    "abbr": "xmas2012",
    "description": "- placeholder -",
    "icon": "tree",
    "name": "2012 Holiday Pack",
    "official": true,
    "promptsCount": 7,
    "responsesCount": 23,
  },
  Object {
    "abbr": "trumpbag",
    "description": "- placeholder -",
    "icon": "medkit",
    "name": "Trump Survival Pack",
    "official": true,
    "promptsCount": 3,
    "responsesCount": 22,
  },
  Object {
    "abbr": "PAXE2014",
    "description": "- placeholder -",
    "icon": "arrow-circle-o-right",
    "name": "PAX East 2014",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 22,
  },
  Object {
    "abbr": "www",
    "description": "- placeholder -",
    "icon": "globe",
    "name": "World Wide Web Pack",
    "official": true,
    "promptsCount": 9,
    "responsesCount": 21,
  },
  Object {
    "abbr": "Canadian",
    "description": "- placeholder -",
    "icon": "leaf",
    "name": "Canadian",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 21,
  },
  Object {
    "abbr": "Box",
    "description": "- placeholder -",
    "icon": "cube",
    "name": "Box Expansion",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 21,
  },
  Object {
    "abbr": "xmas2013",
    "description": "- placeholder -",
    "icon": "gift",
    "name": "2013 Holiday Pack",
    "official": true,
    "promptsCount": 9,
    "responsesCount": 21,
  },
  Object {
    "abbr": "HOCAH",
    "description": "- placeholder -",
    "icon": "university",
    "name": "House of Cards Against Humanity",
    "official": true,
    "promptsCount": 9,
    "responsesCount": 16,
  },
  Object {
    "abbr": "reject",
    "description": "- placeholder -",
    "icon": "thumbs-down",
    "name": "Reject Pack",
    "official": true,
    "promptsCount": 8,
    "responsesCount": 16,
  },
  Object {
    "abbr": "trumpvote",
    "description": "- placeholder -",
    "icon": "bullhorn",
    "name": "Vote for Trump Pack",
    "official": true,
    "promptsCount": 3,
    "responsesCount": 12,
  },
  Object {
    "abbr": "hillary",
    "description": "- placeholder -",
    "icon": "venus",
    "name": "Vote for Hillary Pack",
    "official": true,
    "promptsCount": 3,
    "responsesCount": 11,
  },
  Object {
    "abbr": "misprint",
    "description": "- placeholder -",
    "icon": "print",
    "name": "Misprint Replacement Bonus Cards",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 9,
  },
  Object {
    "abbr": "PAXEP2014",
    "description": "- placeholder -",
    "icon": "users",
    "name": "PAX East 2014 Panel Pack",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 8,
  },
  Object {
    "abbr": "PAXPP2014",
    "description": "- placeholder -",
    "icon": "user-times",
    "name": "PAX Prime 2014 Panel Pack",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 6,
  },
  Object {
    "abbr": "Weed",
    "description": "- placeholder -",
    "icon": "pagelines",
    "name": "Weed Pack",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 0,
  },
  Object {
    "abbr": "Period",
    "description": "- placeholder -",
    "icon": "tint",
    "name": "Period Pack",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 0,
  },
  Object {
    "abbr": "apples",
    "description": "- placeholder -",
    "icon": "apple",
    "name": "[$] Apples to Apples&reg; Party Pack",
    "official": false,
    "promptsCount": 249,
    "responsesCount": 747,
  },
  Object {
    "abbr": "c-anime",
    "description": "- placeholder -",
    "icon": "sun-o",
    "name": "[C] Anime",
    "official": false,
    "promptsCount": 151,
    "responsesCount": 525,
  },
  Object {
    "abbr": "c-guywglasses",
    "description": "- placeholder -",
    "icon": "street-view",
    "name": "[C] That Guy With The Glasses",
    "official": false,
    "promptsCount": 207,
    "responsesCount": 424,
  },
  Object {
    "abbr": "c-homestuck",
    "description": "- placeholder -",
    "icon": "home",
    "name": "[C] Cards Against Homestuck",
    "official": false,
    "promptsCount": 67,
    "responsesCount": 340,
  },
  Object {
    "abbr": "crabs",
    "description": "- placeholder -",
    "icon": "wrench",
    "name": "[$] Crabs Adjust Humidity",
    "official": false,
    "promptsCount": 129,
    "responsesCount": 320,
  },
  Object {
    "abbr": "HACK",
    "description": "- placeholder -",
    "icon": "laptop",
    "name": "[C] Hackers Against Humanity",
    "official": false,
    "promptsCount": 78,
    "responsesCount": 279,
  },
  Object {
    "abbr": "c-tg",
    "description": "- placeholder -",
    "icon": "reddit",
    "name": "[C] /tg/",
    "official": false,
    "promptsCount": 90,
    "responsesCount": 266,
  },
  Object {
    "abbr": "matrimony",
    "description": "- placeholder -",
    "icon": "bell",
    "name": "[$] Cads About Matrimony",
    "official": false,
    "promptsCount": 55,
    "responsesCount": 230,
  },
  Object {
    "abbr": "c-admin",
    "description": "- placeholder -",
    "icon": "thumbs-o-up",
    "name": "[C] Admin's Picks",
    "official": false,
    "promptsCount": 123,
    "responsesCount": 227,
  },
  Object {
    "abbr": "c-vidya",
    "description": "- placeholder -",
    "icon": "video-camera",
    "name": "[C] Vidya",
    "official": false,
    "promptsCount": 107,
    "responsesCount": 215,
  },
  Object {
    "abbr": "c-gamegrumps",
    "description": "- placeholder -",
    "icon": "frown-o",
    "name": "[C] Game Grumps",
    "official": false,
    "promptsCount": 99,
    "responsesCount": 178,
  },
  Object {
    "abbr": "c-sodomydog",
    "description": "- placeholder -",
    "icon": "paw",
    "name": "[C] Sodomy Dog's Furry Pack",
    "official": false,
    "promptsCount": 105,
    "responsesCount": 178,
  },
  Object {
    "abbr": "c-northernlion",
    "description": "- placeholder -",
    "icon": "youtube-play",
    "name": "[C] Northernlion",
    "official": false,
    "promptsCount": 101,
    "responsesCount": 171,
  },
  Object {
    "abbr": "c-rpanons",
    "description": "- placeholder -",
    "icon": "user-secret",
    "name": "[C] RPAnons",
    "official": false,
    "promptsCount": 69,
    "responsesCount": 163,
  },
  Object {
    "abbr": "c-rt",
    "description": "- placeholder -",
    "icon": "youtube",
    "name": "[C] Rooster Teeth",
    "official": false,
    "promptsCount": 69,
    "responsesCount": 155,
  },
  Object {
    "abbr": "c-equinity",
    "description": "- placeholder -",
    "icon": "trophy",
    "name": "[C] Cards Against Equinity",
    "official": false,
    "promptsCount": 60,
    "responsesCount": 138,
  },
  Object {
    "abbr": "c-stupid",
    "description": "- placeholder -",
    "icon": "lemon-o",
    "name": "[C] Ridiculously Stupid",
    "official": false,
    "promptsCount": 47,
    "responsesCount": 115,
  },
  Object {
    "abbr": "c-vewysewious",
    "description": "- placeholder -",
    "icon": "black-tie",
    "name": "[C] Very Serious",
    "official": false,
    "promptsCount": 59,
    "responsesCount": 113,
  },
  Object {
    "abbr": "c-golby",
    "description": "- placeholder -",
    "icon": "file-text-o",
    "name": "[C] Golby Fan Club",
    "official": false,
    "promptsCount": 18,
    "responsesCount": 101,
  },
  Object {
    "abbr": "c-prtg",
    "description": "A free marketing deck from Paessler labeled 'The Game Against Downtime: A card game for IT lovers', each card is branded with 'PRTG Network Monitor'.",
    "icon": "cloudscale",
    "name": "[C] PRTG",
    "official": false,
    "promptsCount": 20,
    "responsesCount": 99,
  },
  Object {
    "abbr": "c-mrman",
    "description": "- placeholder -",
    "icon": "male",
    "name": "[C] Mr. Man Collection",
    "official": false,
    "promptsCount": 37,
    "responsesCount": 99,
  },
  Object {
    "abbr": "NSFH",
    "description": "- placeholder -",
    "icon": "exclamation-triangle",
    "name": "[C] Not Safe For Humanity",
    "official": false,
    "promptsCount": 32,
    "responsesCount": 99,
  },
  Object {
    "abbr": "c-khaos",
    "description": "- placeholder -",
    "icon": "ils",
    "name": "[C] Khaos WolfKat",
    "official": false,
    "promptsCount": 76,
    "responsesCount": 90,
  },
  Object {
    "abbr": "c-ladies",
    "description": "- placeholder -",
    "icon": "female",
    "name": "[C] Ladies Against Humanity",
    "official": false,
    "promptsCount": 25,
    "responsesCount": 88,
  },
  Object {
    "abbr": "CAHgrognards",
    "description": "- placeholder -",
    "icon": "moon-o",
    "name": "[C] Grognards Against Humanity (RPG fandom pack)",
    "official": false,
    "promptsCount": 22,
    "responsesCount": 86,
  },
  Object {
    "abbr": "GOT",
    "description": "- placeholder -",
    "icon": "shield",
    "name": "[C] Game of Thrones (no spoilers)",
    "official": false,
    "promptsCount": 20,
    "responsesCount": 80,
  },
  Object {
    "abbr": "c-fim",
    "description": "- placeholder -",
    "icon": "heart",
    "name": "[C] FiMFiction.net",
    "official": false,
    "promptsCount": 36,
    "responsesCount": 77,
  },
  Object {
    "abbr": "c-doctorwho",
    "description": "- placeholder -",
    "icon": "stethoscope",
    "name": "[C] Doctor Who",
    "official": false,
    "promptsCount": 26,
    "responsesCount": 71,
  },
  Object {
    "abbr": "c-ragingpsyfag",
    "description": "- placeholder -",
    "icon": "fighter-jet",
    "name": "[C] RagingPsyfag's Pack of Shenanigans",
    "official": false,
    "promptsCount": 16,
    "responsesCount": 62,
  },
  Object {
    "abbr": "c-imgur",
    "description": "- placeholder -",
    "icon": "info",
    "name": "[C] Imgur",
    "official": false,
    "promptsCount": 56,
    "responsesCount": 49,
  },
  Object {
    "abbr": "c-xkcd",
    "description": "- placeholder -",
    "icon": "close",
    "name": "[C] xkcd",
    "official": false,
    "promptsCount": 67,
    "responsesCount": 41,
  },
  Object {
    "abbr": "c-derps",
    "description": "- placeholder -",
    "icon": "meh-o",
    "name": "[C] Derps Against Humanity",
    "official": false,
    "promptsCount": 42,
    "responsesCount": 37,
  },
  Object {
    "abbr": "Image1",
    "description": "- placeholder -",
    "icon": "picture-o",
    "name": "[C] Joey Image 1",
    "official": false,
    "promptsCount": 15,
    "responsesCount": 35,
  },
  Object {
    "abbr": "c-neindy",
    "description": "- placeholder -",
    "icon": "question",
    "name": "[C] NEIndy",
    "official": false,
    "promptsCount": 16,
    "responsesCount": 30,
  },
  Object {
    "abbr": "c-antisocial",
    "description": "- placeholder -",
    "icon": "gavel",
    "name": "[C] Antisocial Injustice",
    "official": false,
    "promptsCount": 9,
    "responsesCount": 27,
  },
  Object {
    "abbr": "c-nobilis",
    "description": "- placeholder -",
    "icon": "exclamation",
    "name": "[C] Nobilis Reed",
    "official": false,
    "promptsCount": 10,
    "responsesCount": 24,
  },
  Object {
    "abbr": "c-socialgamer",
    "description": "- placeholder -",
    "icon": "gamepad",
    "name": "[C] SocialGamer",
    "official": false,
    "promptsCount": 13,
    "responsesCount": 22,
  },
  Object {
    "abbr": "c-eurovision",
    "description": "- placeholder -",
    "icon": "music",
    "name": "[C] Eurovision Song Contest",
    "official": false,
    "promptsCount": 20,
    "responsesCount": 20,
  },
]
`;
